# social-x-platform

./: .vercel-build-force  COMPLETE_SHEET_DATA.json  DEPLOYMENT.md  DEPLOY_TRIGGER.md  HYPE.sol  HYPE_DEPLOYED_SUCCESS.json  HYPE_token.sol  NFTMintingContract.sol  README.md  SecureSocialXTrading.sol  SocialAccountToken.sol  SocialToken.sol  SocialTradingPlatform.sol  SocialXTrading.sol  SocialXTradingFactory.sol  SocialXTradingSecure.sol  TokenFactory.sol  authentic_naruto_generator.py  authentic_nft_marketplace.py  authentic_solana_data.py  authentic_trait_generator.py  auto_sheets_sync.py  auto_sheets_updater.py  axiom_trading_platform.py  axiom_trading_server.py  blockchain_nft_marketplace.py  blockscout_fetcher.py  blueprint_gemini_nft.py  bulk_nft_fetcher.py  check_keys_simple.py  check_wallet.py  clean_art_viewer.py  clean_marketplace.py  clean_nft_artwork_display.py  clean_port_5000_marketplace.py  clean_sheets_export.py  complete_auto_sync.py  complete_nft_marketplace.py  contract_analysis.py  contract_compiler.py  (+168 more)
api/: market-overview.py  recent-trades.py  trending-accounts.py
backend/: app.py  socialx_api.py  socialx_web3_api.py  web3_contract_manager.py
frontend/: .env.example  debug_lhype.html  index.html  package-lock.json  package.json  vite.config.js
frontend/api/: market-overview.py  trending-accounts.py
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: PrivyCallback.jsx  (+2 more)
gitbook-docs/: README.md  SUMMARY.md  airdrop.md  community.md  faq.md  getting-started.md  presale.md  roadmap.md  smart-contracts.md  tokenomics.md
(+6 files in other folders)
