[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "crypto>=1.4.1",
    "cryptography>=45.0.6",
    "ecdsa>=0.19.1",
    "eth-account>=0.13.7",
    "eth-hash>=0.7.1",
    "eth-utils>=5.3.0",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "google-generativeai>=0.8.5",
    "hexbytes>=1.3.1",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "sift-stack-py>=0.8.3",
    "trafilatura>=2.0.0",
    "web3>=7.13.0",
]
